# CPU-Usage-Tracker

./: .gitignore  CMakeLists.txt  Makefile  README.md  analyzer  analyzer.c  analyzer.h  averageRegister.c  averageRegister.h  build.sh  logger.c  logger.h  main.c  printer.c  printer.h  queue.c  queue.h  reader.c  reader.h  watchdog.c  watchdog.h
app/: main.c
include/: analyzer.h  reader.h
lib/: analyzer.h  printer.h
src/: CMakeLists.txt  analyzer.c  main.c  printer.c  reader.c
